--- a/src/style/general.scss
+++ b/src/style/general.scss
@@ -2,6 +2,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family:Georgia, 'Times New Roman', Times, serif;
   }
   
   a {
@@ -19,6 +20,12 @@
   
   img {
     max-width: 100%;
+  }
+
+  body{
+    background-color: rgb(42, 42, 42);
+    color: rgb(202, 202, 36);
+    border: 13px solid gray;
   }
   
   .container {
